--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Metas -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta htłøtp-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- General -->
     <title>frontside. | o portal norteador</title>
@@ -20,7 +20,7 @@
     <!-- Header -->
     <header>
         <nav>
-            <img src="assets/images/logowhite.svg" id="brand">
+            <img src="assets/images/logowhite.svg" class="brand" alt="Logo branca do blog.">
             <ul>
                 <li><a href="#"><span class="icon"><i class="fa-solid fa-house"></i></span>Início</a></li>
                 <li><a href="https://github.com/edwardribas" target="_blank"><span class="icon"><i class="fa-brands fa-github"></i></span>Github</a></li>
@@ -39,7 +39,7 @@
                 <h2>O portal de artigos que o norteará nos estudos.</h2>
             </div>
             <div class="image desktop">
-                <img src="assets/images/hero.svg" alt="">
+                <img src="assets/images/hero.svg" alt="Rapaz estudando em seu escritório.">
             </div>
         </div>
     </div>
@@ -51,8 +51,8 @@
             <article>
                 <a href="articles/01.html">
                     <div class="image">
-                        <img src="assets/images/artigos/img1.jpeg">
-                        <img src="assets/images/authors/ribas.jpg" class="author">
+                        <img src="assets/images/artigos/img1.jpeg" alt="Banner do artigo.">
+                        <img src="assets/images/authors/ribas.jpg" class="author" alt="Imagem do autor do artigo.">
                     </div>
                     <div class="text">
                         <p>Eduardo Ribas | 12 de abril de 2022</p>
@@ -62,65 +62,65 @@
             </article>
 
             <article>
-                <a href="articles/02.html">
+                <a href="#">
                     <div class="image">
-                        <img src="assets/images/artigos/img3.jpeg">
-                        <img src="assets/images/authors/ribas.jpg" class="author">
+                        <img src="assets/images/artigos/img3.jpeg" alt="Banner do artigo.">
+                        <img src="assets/images/authors/ribas.jpg" class="author" alt="Imagem do autor do artigo.">
                     </div>
                     <div class="text">
-                        <p>Eduardo Ribas | 14 de abril de 2022</p>
+                        <p>Eduardo Ribas | 14 de abril de 2022 | Não lançado</p>
                         <h3>Como conseguir uma melhor retenção de conteúdo?</h3>
                     </div>
                 </a>
             </article>
 
             <article>
-                <a href="articles/03.html">
+                <a href="#">
                     <div class="image">
-                        <img src="assets/images/artigos/img4.jpeg">
-                        <img src="assets/images/authors/ribas.jpg" class="author">
+                        <img src="assets/images/artigos/img4.jpeg" alt="Banner do artigo.">
+                        <img src="assets/images/authors/ribas.jpg" class="author" alt="Imagem do autor do artigo.">
                     </div>
                     <div class="text">
-                        <p>Eduardo Ribas | 26 de abril de 2022</p>
+                        <p>Eduardo Ribas | 26 de abril de 2022 | Não lançado</p>
                         <h3>Qual a importância de manter o seu ambiente limpo e organizado?</h3>
                     </div>
                 </a>
             </article>
 
             <article>
-                <a href="articles/04.html">
+                <a href="#">
                     <div class="image">
-                        <img src="assets/images/artigos/img5.jpeg">
-                        <img src="assets/images/authors/ribas.jpg" class="author">
+                        <img src="assets/images/artigos/img5.jpeg" alt="Banner do artigo.">
+                        <img src="assets/images/authors/ribas.jpg" class="author" alt="Imagem do autor do artigo.">
                     </div>
                     <div class="text">
-                        <p>Eduardo Ribas | 28 de abril de 2022</p>
+                        <p>Eduardo Ribas | 28 de abril de 2022 | Não lançado</p>
                         <h3>Sites e ferramentas que podem ajudar no seu dia a dia como desenvolvedor web.</h3>
                     </div>
                 </a>
             </article>
 
             <article>
-                <a href="articles/05.html">
+                <a href="#">
                     <div class="image">
-                        <img src="assets/images/artigos/img2.jpeg">
-                        <img src="assets/images/authors/ribas.jpg" class="author">
+                        <img src="assets/images/artigos/img2.jpeg" alt="Banner do artigo.">
+                        <img src="assets/images/authors/ribas.jpg" class="author" alt="Imagem do autor do artigo.">
                     </div>
                     <div class="text">
-                        <p>Eduardo Ribas | 02 de maio de 2022</p>
+                        <p>Eduardo Ribas | 02 de maio de 2022 | Não lançado</p>
                         <h3>Descubra a importância e como aplicar o brainstorm em seus projetos.</h3>
                     </div>
                 </a>
             </article>
 
             <article>
-                <a href="articles/06.html">
+                <a href="#">
                     <div class="image">
-                        <img src="assets/images/artigos/img7.jpeg">
-                        <img src="assets/images/authors/ribas.jpg" class="author">
+                        <img src="assets/images/artigos/img7.jpeg" alt="Banner do artigo.">
+                        <img src="assets/images/authors/ribas.jpg" class="author" alt="Imagem do autor do artigo.">
                     </div>
                     <div class="text">
-                        <p>Eduardo Ribas | 04 de maio de 2022</p>
+                        <p>Eduardo Ribas | 04 de maio de 2022 | Não lançado</p>
                         <h3>Networking: o que é e a diferença que isso pode fazer na sua vida.</h3>
                     </div>
                 </a>
@@ -137,7 +137,7 @@
 
     <div class="info-card">
         <div class="image">
-            <img src="assets/images/blogging.svg">
+            <img src="assets/images/blogging.svg" alt="Imagem de rapaz digitando em seu notebook.">
         </div>
         <div class="text">
             <h2>Sobre o nosso projeto...</h2>
@@ -153,7 +153,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <img src="assets/images/logowhite.svg">
+            <img src="assets/images/logowhite.svg" alt="Logo branca do blog.">
             <p>frontside &copy; 2022. Todos os direitos reservados.</p>
         </div>
     </footer>
