--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         <div class="articles">
             <article>
-                <a href="articles/01.html">
+                <a href="./articles/01.html">
                     <div class="image">
                         <img src="assets/images/artigos/img1.jpeg" alt="Banner do artigo.">
                         <img src="assets/images/authors/ribas.jpg" class="author" alt="Imagem do autor do artigo.">
@@ -62,13 +62,13 @@
             </article>
 
             <article>
-                <a href="#">
+                <a href="./articles/02.html">
                     <div class="image">
                         <img src="assets/images/artigos/img3.jpeg" alt="Banner do artigo.">
                         <img src="assets/images/authors/ribas.jpg" class="author" alt="Imagem do autor do artigo.">
                     </div>
                     <div class="text">
-                        <p>Eduardo Ribas | 14 de abril de 2022 | Não lançado</p>
+                        <p>Eduardo Ribas | 16 de abril de 2022</p>
                         <h3>Como conseguir uma melhor retenção de conteúdo?</h3>
                     </div>
                 </a>
