--- a/membros.html
+++ b/membros.html
@@ -9,9 +9,9 @@
 
     <!-- General -->
     <title>frontside. | o portal norteador</title>
-    <link rel="shortcut icon" href="assets/images/logo/logo.svg">
-    <link rel="stylesheet" href="../assets/css/style.css">
-    <link rel="stylesheet" href="../assets/css/members.css">
+    <link rel="shortcut icon" href="./assets/images/logo/logo.svg">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/members.css">
 
     <!-- Icons -->
     <link href='https://cdn.jsdelivr.net/npm/css.gg/icons/all.css' rel='stylesheet'>
