--- a/membros.html
+++ b/membros.html
@@ -23,7 +23,7 @@
     <header>
         <nav>
             <a href="../index.html">
-                <img src="../assets/images/logo/logoblue.svg" class="brand" alt="Logo azul do blog.">
+                <img src="./assets/images/logo/logoblue.svg" class="brand" alt="Logo azul do blog.">
             </a>
             <ul>
                 <li><a href="../index.html"><span class="icon"><i class="fa-solid fa-house"></i></span>Início</a></li>
@@ -39,7 +39,7 @@
     <header class="hidden">
         <nav>
             <a href="#" aria-label="Ir para o topo.">
-                <img src="../assets/images/logo/logowhite.svg" class="brand" alt="Logo branca do blog.">
+                <img src="./assets/images/logo/logowhite.svg" class="brand" alt="Logo branca do blog.">
             </a>
             <ul>
                 <li><a href="../index.html"><span class="icon"><i class="fa-solid fa-house"></i></span>Início</a></li>
@@ -182,15 +182,15 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <img src="../assets/images/logo/logowhite.svg" alt="Logo branca do blog.">
+            <img src="./assets/images/logo/logowhite.svg" alt="Logo branca do blog.">
             <p>frontside &copy; 2022. Todos os direitos reservados.</p>
         </div>
     </footer>
 
     <!-- Application -->
-    <script src="../assets/js/app.js"></script>
-    <script src="../assets/js/articles.js"></script>
-    <script src="../assets/js/members.js"></script>
+    <script src="./assets/js/app.js"></script>
+    <script src="./assets/js/articles.js"></script>
+    <script src="./assets/js/members.js"></script>
 </body>
 
 </html>
