Improvements and corrections.

--- a/membros.html
+++ b/membros.html
@@ -22,11 +22,11 @@
     <!-- Header -->
     <header>
         <nav>
-            <a href="../index.html">
+            <a href="./index.html">
                 <img src="./assets/images/logo/logoblue.svg" class="brand" alt="Logo azul do blog.">
             </a>
             <ul>
-                <li><a href="../index.html"><span class="icon"><i class="fa-solid fa-house"></i></span>Início</a></li>
+                <li><a href="./index.html"><span class="icon"><i class="fa-solid fa-house"></i></span>Início</a></li>
                 <li><a href="https://github.com/edwardribas" target="_blank"><span class="icon"><i class="fa-brands fa-github"></i></span>Github</a></li>
                 <li><a href="#" aria-label="Você já está nesta página."><span class="icon"><i class="fa-solid fa-user-group"></i></span>Membros</a></li>
             </ul>
@@ -42,7 +42,7 @@
                 <img src="./assets/images/logo/logowhite.svg" class="brand" alt="Logo branca do blog.">
             </a>
             <ul>
-                <li><a href="../index.html"><span class="icon"><i class="fa-solid fa-house"></i></span>Início</a></li>
+                <li><a href="./index.html"><span class="icon"><i class="fa-solid fa-house"></i></span>Início</a></li>
                 <li><a href="https://github.com/edwardribas" target="_blank"><span class="icon"><i class="fa-brands fa-github"></i></span>Github</a></li>
                 <li><a href="#" aria-label="Você já está nesta página."><span class="icon"><i class="fa-solid fa-user-group"></i></span>Membros</a></li>
             </ul>
@@ -66,7 +66,7 @@
                 <!-- Editor 1 -->
                 <div class="card">
                     <div class="image">
-                        <img src="./assets/images/members/teste.png" alt="Foto de um dos membros do clube.">
+                        <img src="./assets/images/members/ribas.png" alt="Foto de um dos membros do clube.">
                     </div>
                     <div class="description">
                         <h2>Eduardo Ribas</h2>
