--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <article>
                 <a href="./articles/02.html">
                     <div class="image">
-                        <img src="assets/images/artigos/img3.jpeg" alt="Banner do artigo.">
+                        <img src="assets/images/artigos/img2.jpeg" alt="Banner do artigo.">
                         <img src="assets/images/authors/ribas.jpg" class="author" alt="Imagem do autor do artigo.">
                     </div>
                     <div class="text">
@@ -76,64 +76,12 @@
                     </div>
                 </a>
             </article>
-
-            <article>
-                <a href="./articles/03.html">
-                    <div class="image">
-                        <img src="assets/images/artigos/img4.jpeg" alt="Banner do artigo.">
-                        <img src="assets/images/authors/ribas.jpg" class="author" alt="Imagem do autor do artigo.">
-                    </div>
-                    <div class="text">
-                        <p>Eduardo Ribas | 26 de abril de 2022</p>
-                        <h3>Qual a importância de manter o seu ambiente limpo e organizado?</h3>
-                    </div>
-                </a>
-            </article>
-
-            <article>
-                <a href="#">
-                    <div class="image">
-                        <img src="assets/images/artigos/img5.jpeg" alt="Banner do artigo.">
-                        <img src="assets/images/authors/ribas.jpg" class="author" alt="Imagem do autor do artigo.">
-                    </div>
-                    <div class="text">
-                        <p>Eduardo Ribas | 28 de abril de 2022 | Não lançado</p>
-                        <h3>Sites e ferramentas que podem ajudar no seu dia a dia como desenvolvedor web.</h3>
-                    </div>
-                </a>
-            </article>
-
-            <article>
-                <a href="#">
-                    <div class="image">
-                        <img src="assets/images/artigos/img2.jpeg" alt="Banner do artigo.">
-                        <img src="assets/images/authors/ribas.jpg" class="author" alt="Imagem do autor do artigo.">
-                    </div>
-                    <div class="text">
-                        <p>Eduardo Ribas | 02 de maio de 2022 | Não lançado</p>
-                        <h3>Descubra a importância e como aplicar o brainstorm em seus projetos.</h3>
-                    </div>
-                </a>
-            </article>
-
-            <article>
-                <a href="#">
-                    <div class="image">
-                        <img src="assets/images/artigos/img7.jpeg" alt="Banner do artigo.">
-                        <img src="assets/images/authors/ribas.jpg" class="author" alt="Imagem do autor do artigo.">
-                    </div>
-                    <div class="text">
-                        <p>Eduardo Ribas | 04 de maio de 2022 | Não lançado</p>
-                        <h3>Networking: o que é e a diferença que isso pode fazer na sua vida.</h3>
-                    </div>
-                </a>
-            </article>
         </div>
 
         <div class="sticky-bar">
             <h2>Sobre este blog...</h2>
             <p>Falaremos sobre diversos assuntos relacionados ao Front-End com o intuito de sanar dúvidas e gerar conhecimento tanto para o leitor como para quem escreve.</p>
-            <a href="https://github.com/edwardribas" target="_blank"><i class="fa-brands fa-github"></i>/ edwardribas</a>
+            <a href="https://github.com/edwardribas/" target="_blank"><i class="fa-brands fa-github"></i>/ edwardribas</a>
         </div>
             
     </main>
