--- a/membros.html
+++ b/membros.html
@@ -70,7 +70,7 @@
                     </div>
                     <div class="description">
                         <h2>Eduardo Ribas</h2>
-                        <h3><b>Fundador</b> | 2º ano C - Turma A</h3>
+                        <h3>2º ano C - Turma A</h3>
                     </div>
                 </div>
             </div>
