Tags keywords addition and some general improvements.

--- a/membros.html
+++ b/membros.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <!-- General -->
-    <title>frontside. | o portal norteador</title>
+    <title>frontside | o portal norteador</title>
     <link rel="shortcut icon" href="./assets/images/logo/logo.svg">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/members.css">
