Additions and improvements.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         <div class="container">
             <div class="text">
                 <h1>Quer ajuda? Vem de frontside.</h1>
-                <h2>O portal de artigos que o norteará nos estudos.</h2>
+                <h2>Postagens práticas e eficientes para o seu melhor entendimento.</h2>
+                <button aria-label="Acessar matéria aleatória."><i class="fa-solid fa-shuffle"></i> Surpreenda-me</button>
             </div>
             <div class="image desktop">
                 <img src="assets/images/illustrations/hero.svg" alt="Rapaz estudando em seu escritório.">
@@ -110,7 +111,7 @@
     </footer>
 
     <!-- Application -->
-    <script src="assets/js/index.js"></script>
+    <script type="module" src="assets/js/index.js"></script>
     <script src="assets/js/app.js"></script>
 </body>
 </html>
