Index shuffle button update.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="text">
                 <h1>Quer ajuda? Vem de frontside.</h1>
                 <h2>Postagens práticas e eficientes para o seu melhor entendimento.</h2>
-                <button aria-label="Acessar matéria aleatória."><i class="fa-solid fa-shuffle"></i> Surpreenda-me</button>
+                <a aria-label="Acessar matéria aleatória."><i class="fa-solid fa-shuffle"></i> Surpreenda-me</a>
             </div>
             <div class="image desktop">
                 <img src="assets/images/illustrations/hero.svg" alt="Rapaz estudando em seu escritório.">
