--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
     <main>
 
         <div class="articles">
+            <!-- Maneiras de utilizar a tecnologia para evitar a procrastinação. -->
             <article>
                 <a href="./articles/01.html">
                     <div class="image">
-                        <img src="assets/images/artigos/img1.jpeg" alt="Banner do artigo.">
+                        <img src="assets/images/artigos/article-1.jpeg" alt="Banner do artigo.">
                         <img src="assets/images/authors/ribas.jpg" class="author" alt="Imagem do autor do artigo.">
                     </div>
                     <div class="text">
@@ -65,15 +66,30 @@
                 </a>
             </article>
 
+            <!-- Como conseguir uma melhor retenção de conteúdo? -->
             <article>
                 <a href="./articles/02.html">
                     <div class="image">
-                        <img src="assets/images/artigos/img2.jpeg" alt="Banner do artigo.">
+                        <img src="assets/images/artigos/article-2.jpeg" alt="Banner do artigo.">
                         <img src="assets/images/authors/ribas.jpg" class="author" alt="Imagem do autor do artigo.">
                     </div>
                     <div class="text">
                         <p>Eduardo Ribas | 16 de abril de 2022</p>
                         <h3>Como conseguir uma melhor retenção de conteúdo?</h3>
+                    </div>
+                </a>
+            </article>
+
+            <!-- Descubra os principais tipos primitivos do JavaScript. -->
+            <article>
+                <a href="./articles/03.html">
+                    <div class="image">
+                        <img src="assets/images/artigos/article-3.jpeg" alt="Banner do artigo.">
+                        <img src="assets/images/authors/ribas.jpg" class="author" alt="Imagem do autor do artigo.">
+                    </div>
+                    <div class="text">
+                        <p>Eduardo Ribas | 07 de junho de 2022</p>
+                        <h3>Descubra os principais tipos primitivos do JavaScript.</h3>
                     </div>
                 </a>
             </article>
